# libCharon

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CPackConfig.cmake  CuraTestPlugin.curapackage  Dockerfile  Jenkinsfile  README.md  build.sh  build_for_ultimaker.sh  build_package.sh  charon_requirements.txt  conanfile.py  coverage.ini  make_docker.sh  mypy.ini  package.sh  pull_request_template.md  pycodestyle.ini  pytest.ini  release.sh  requirements-testing.txt  requirements.txt  run_all_tests.sh  run_mypy.sh  run_pytest.sh  run_shellcheck.sh  run_style_analysis.sh  setup.py  test.curapackage
.github/workflows/: build_on_push_pr.yml
.pytest_cache/v/cache/: lastfailed  nodeids
Charon/: FileInterface.py  OpenMode.py  ReadOnlyError.py  VirtualFile.py  WriteOnlyError.py  __init__.py
Charon/Client/: DBusInterface.py  Request.py  __init__.py  test.py  test_glib.py  test_qt.py
Charon/Service/: FileService.py  Job.py  Queue.py  RequestQueue.py  __init__.py  main.py
Charon/filetypes/: CuraPackage.py  GCodeFile.py  GCodeGzFile.py  GCodeSocket.py  OpenDocumentFormat.py  OpenPackagingConvention.py  UltimakerContainerFile.py  UltimakerFormatPackage.py  __init__.py
_build_armhf/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
_build_armhf/_CPack_Packages/Linux/DEB/: charon-9999.99.99-Linux.deb
_build_armhf/_CPack_Packages/Linux/DEB/charon-9999.99.99-Linux/: control  md5sums
_build_armhf/_CPack_Packages/Linux/DEB/charon-9999.99.99-Linux/usr/share/dbus-1/system.d/: nl.ultimaker.charon.conf
ci/: complexity_analysis.sh  dead_code_analysis.sh  mypy.sh  pytest.sh  style_analysis.sh
docker/: build.sh
docker_env/: Dockerfile  buildenv_check.sh
docs/: class_diagram.plantuml  cura_package.md  library.md  service.md  service_sequence.plantuml  ufp.md  ultimaker_format_package.md
service/: charon.service  postinst
src/: FileInterface.py  OpenMode.py  ReadOnlyError.py  VirtualFile.py
src/filetypes/: UltimakerContainerFile.py
tests/filetypes/: TestCuraPackage.py  TestGCodeFormat.py  TestOpenDocumentFormat.py  TestOpenPackagingConvention.py  TestUltimakerFormatPackage.py  testGcodeFile.py
tests/filetypes/plugins/CuraTestIgnoredFilesPlugin/: plugin.json
tests/filetypes/plugins/CuraTestPlugin/: __init__.py
tests/filetypes/resources/: hello.opc  um3.gcode
tests/filetypes/resources/definitions/: example_machine.def.json  example_machine_two.def.json
tests/filetypes/resources/materials/: example_material.xml.fdm_material  example_material_two.xml.fdm_material
tests/filetypes/resources/qualities/: example_quality.inst.cfg  example_quality_two.inst.cfg
